<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbars="vertical"
    android:fadingEdge="vertical"
    tools:context=".GameDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/game_detail_main_photo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:adjustViewBounds="false"
            android:scaleType="centerCrop"
            android:src="@mipmap/logo"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/game_detail_photo_recycle_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="20">

                <TextView
                    android:id="@+id/game_detail_name_chinese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/game_item_name_chinese"
                    android:textStyle="bold"
                    android:textSize="25dp"/>

                <TextView
                    android:id="@+id/game_detail_name_english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold"
                    android:text="@string/game_item_name_english"/>

                <TextView
                    android:id="@+id/game_detail_order_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/game_item_order_date"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="rank"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:background="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/game_detail_recommend_rank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:background="@color/colorPrimary"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="推荐度"/>

                <TextView
                    android:id="@+id/game_detail_recommend_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="10dp"
                    android:text="推荐率98%"/>


                <Button
                    android:id="@+id/game_detail_like_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="收藏"
                    android:clickable="true"/>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tag_list"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/game_detail_region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="15dp"
                    android:textColor="@android:color/black"
                    android:text="日区"/>

                <TextView
                    android:id="@+id/game_detail_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="10dp"
                    android:text="中文"/>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/game_detail_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="15dp"
                    android:textColor="@android:color/black"
                    android:text="12.75GB"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="10dp"
                    android:text="容量"/>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/game_detail_players"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="15dp"
                    android:textColor="@android:color/black"
                    android:text="1-2"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="10dp"
                    android:text="玩家人数"/>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/game_detail_has_solid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="15dp"
                    android:textColor="@android:color/black"
                    android:text="有"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="10dp"
                    android:text="实体卡带"/>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/game_detail_has_demo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="15dp"
                    android:textColor="@android:color/black"
                    android:text="无"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="10dp"
                    android:text="试玩"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:text="低价排名"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textSize="12dp"
                        android:text="历史最低："/>

                    <TextView
                        android:id="@+id/game_detail_price_history_lowest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textSize="12dp"
                        android:text="249.01CNY"/>

                </LinearLayout>


            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/game_detail_low_price_rank_recycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="15dp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="详细介绍"/>

            <TextView
                android:id="@+id/game_detail_intro_long"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="15dp"
                android:maxLines="7"
                android:clickable="true"
                android:text="@string/game_detail_introduce"/>

        </LinearLayout>

    </LinearLayout>


</ScrollView>